# clap-saw-demo-ftxui

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
src/: clap-saw-demo-editor.cpp  clap-saw-demo-editor.h  clap-saw-demo.cpp  clap-saw-demo.h
test/: CMakeLists.txt  test_gui.cpp  test_parameters.cpp  test_plugin.cpp
